--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
 
   <div class="image">
-    <img src="images/chart (1).png" alt="" />
+    <img src="chart (1).png" alt="" />
   </div>
 
   <h1>Activity of Research-Grade Pemivibart against SARS-CoV-2 Sublineages</h1>
