--- a/index.html
+++ b/index.html
@@ -1,112 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SARS-CoV-2 Study</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap&quot; rel="font" />
-
-  <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.6;
-      color: rgb(34, 34, 34);
-    }
-
-    .header {
-      font-size: 13px;
-      font-weight: 600;
-      text-transform: uppercase;
-      color: rgb(204, 51, 0);
-    }
-
-    .label {
-      color: rgb(85, 85, 85);
-      margin-left: 10px;
-    }
-    .label .free {
-    color: rgba(69, 4, 102, 0.878);
-    font-weight: 600;    
-    }
-
-    h1 {
-      font-family: Georgia, 'Times New Roman', Times, serif;
-      font-size: 26px;
-      margin: 20px 0 10px;
-    }
-
-    h2 {
-      font-family: Georgia, 'Times New Roman', Times, serif;
-      font-size: 18px;
-      color: rgb(102, 102, 102);
-      font-weight: 500;
-      margin-top: 0;
-    }
-
-    .image {
-      float: right;
-      margin-left: 20px;
-      width: 260px;
-    }
-
-    .image img {
-      width: 70%;
-      height: 150px;
-    }
-
-    .article-body {
-      font-family: Georgia, 'Times New Roman', Times, serif;
-      font-size: 16px;
-      margin-top: 20px;
-    }
-
-    .correction {
-      margin-top: 25px;
-      font-weight: 600;
-      font-size: 16px;
-    }
-    .correction strong {
-     color: rgb(0, 86, 214);    
-    }
-
-    .correction a {
-      color: rgb(0, 86, 214);
-      text-decoration: none;
-      font-weight: normal;
-    }
-
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Video Game</title>
 </head>
+<style>
+    h2{
+        text-decoration: underline;
+    }
+
+    hr {
+        height: 2px;
+        color: black;
+        background-color: black;
+        margin-bottom: 1.5em;
+    }
+
+    img{
+        width: 53%;
+    }
+    .dates{
+        font-family: 'Times New Roman', Times, serif;
+        color: grey;
+        font-size: 12px;
+    }
+
+    .fall{
+        font-family: 'Times New Roman', Times, serif;
+        color: grey;
+        font-size: 16px;
+        text-align: center;
+    }
+</style>
 <body>
+    <H1>Video Games</H1>
+    <hr />
 
-  <div class="header">
-    CORRESPONDENCE
-    <span class="label">| Nov 13, 2024 | <span class="free">FREE</span></span>
-  </div>
-
-  <div class="image">
-    <img src="chart (1).png" alt="" />
-  </div>
-
-  <h1>Activity of Research-Grade Pemivibart against SARS-CoV-2 Sublineages</h1>
-  <h2>Q. Wang and Others</h2>
-
-  <p class="article-body">
-    SARS-CoV-2 continues to evolve under immunologic pressure. A
-    synthesized version of pemivibart, an anti–SARS-CoV-2 monoclonal
-    antibody with recent emergency-use authorization, showed mixed
-    activity against emerging variants.
-  </p>
-
-  <p class="correction">
-  <strong>Correction</strong>
-  <a href="#">Pemivibart Activity against Recent SARS-CoV-2 JN.1
-    Sublineages</a>
-</p>
-
+    <img src="rots.webp" alt="">
+    <p class = "fall">Sandfall interactice</p>
+   
+    <h2>The Best Video Games of 2025, So Far</h2>
+    <p>Compelling games this year includes Fantasy epics, a fast paced coopertice adventure and a mysterious manor oozing with puzzles</p>
+    <p class = "dates"> June 26, 2025 . BY THE NEW YORK TIMES</p>
+   
 </body>
 </html>
